trunk/Archive2/30/a38f182cdc5791/output
main.cpp:3:21: error: constexpr variable 'ip2' must be initialized by a constant expression
    constexpr int * ip2 = ip;
                    ^     ~~
main.cpp:3:27: note: read of non-constexpr variable 'ip' is not allowed in a constant expression
    constexpr int * ip2 = ip;
                          ^
main.cpp:2:16: note: declared here
    int *const ip = nullptr;
               ^
1 error generated.
