trunk/Archive2/30/a38f182cdc5791/main.cpp
int main() {
    int *const ip = nullptr;
    constexpr int * ip2 = ip;
}